<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DAQ</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="protocol_prompt">Choose Protocol</string>
    <string name="search_hint">Enter Code/Quantity</string>

    <string-array name="protocols">
        <item>ADC</item>
        <item>I2C</item>
        <item>UART</item>
        <item>SPI</item>
    </string-array>

    <string name="title_sensor_list">Sensors</string>
    <string name="title_sensor_detail">Sensor Detail</string>
    <string name="action_add">ADD</string>
    <string name="action_start">START</string>
    <string name="action_stop">STOP</string>
    <string name="select_variable">Select a Variable</string>
    <string name="math_function">enter a math function f(x)</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="division">/</string>
    <string name="one">1</string>
    <string name="logarithm">log</string>
    <string name="exponential">exp</string>
    <string name="natural_log">ln</string>
    <string name="power">^</string>
    <string name="point">.</string>
    <string name="delete">del</string>
    <string name="clear">clr</string>
    <string name="parenthesis1">(</string>
    <string name="parenthesis2">)</string>
    <string name="square_root">sqrt</string>
    <string name="submit">ok</string>
    <string name="spinner_prompt">Variable Name</string>
    <string name="signed">Signed</string>
    <string name="unsigned">Unsigned</string>
    <string name="title_activity_gauge">GaugeActivity</string>

</resources>